Lab-04/05-helloworld-ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: helloworld-user9-ingress-tls
 annotations:
   kubernetes.io/ingress.class: "nginx"
   ingress.kubernetes.io/rewrite-target: "/"
spec:
 tls:
 # k8s ingress defines different tls certificates
 # for each nginx server blocks.
 # k8s ingress default cert is used if
 # no host-specific secret specified
 - hosts:
 # this is the fully-qualified domain name
 # of the first server block
   - hello-user15.172.16.70.58.nip.io
   # is only used by foo1.bar1
   secretName: helloworld-tls-certs-user15
 rules:
   # each server block redirects request
   # to its own backend service
 - host: hello-user15.172.16.70.58.nip.io
   http:
     paths:
     - backend:
         serviceName: helloworld
         servicePort: 5000
